# routes/v2/api.php
@@ -1,0 +1,8 @@
+<?php
+
+use App\Http\Controllers\api\V2\TransactionController;
+use Illuminate\Support\Facades\Route;
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::apiResource('transactions', TransactionController::class)->only('show');
+});
